# proj

./: .gitignore  LICENSE  README.md  pyproject.toml
helloqt/: CMakeLists.txt  helloqt.qrc  helloqt.rc  main.cpp  mw.cpp  mw.h  mw.ui
src/proj/: project_builder.py  status.py  utils.py
src/proj/builder/: clang_project.py  project.py  qt_project.py
src/proj/console/: application.py  command_new.py
src/proj/tpl/c-shared/: CMakeLists.txt.jinja  imsharedlib.c.jinja  imsharedlib.h.jinja  imsharedlib_export.h.jinja
src/proj/tpl/c-static/: CMakeLists.txt.jinja  imstaticlib.c.jinja  imstaticlib.h.jinja
src/proj/tpl/qt-project/: CMakeLists.txt.jinja  QtWindowApp.rc.jinja  main.cpp.jinja  mainwindow.cpp.jinja  mainwindow.ui.jinja  qtwindowapp.qrc.jinja
src/ptpl/: cli.py  core.py
src/ptpl/qt/: build_qt_project.py  qt_command.py
src/ptpl/tpl/cmake-qt-app/: mainwindow.h.jinja
src/rvy/: __init__.py  pathutils.py
tests/: test_qt.py
