[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["RobinVanYang <thehappyone@163.com>"]
readme = "README.md"
packages = [{ include = "proj", from = "src" }, { include = "rvy", from = "src" }]
include = [
    { path = "src/proj/tpl/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
click = "^8.1.7"
typer = "^0.12.3"

[tool.poetry.scripts]
proj = "proj.console.application:main"
reigns = "proj.console.reigns:app"
towns = "proj.console.towns:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
